# OutInPutter

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/resources/qml/: main.qml
app/src/: main.cpp
python_backend/: bridge.pyx  image_processor.py
